# ProjectCrimeWorld

./: CMakeLists.txt  README.md  main.cpp  main.js  main.wasm
.devcontainer/: Dockerfile  devcontainer.json
docs/: main.js  main.wasm
shaders/: fragment_shader.glsl  vertex_shader.glsl
